<resources>
    <string name="app_name" translatable="false">MealCompass</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="favourites">Favourites</string>
    <string name="restaurants">Restaurants</string>
    <string name="home">Home</string>
    <string name="profile_image">Profile Image</string>
    <string name="user" translatable="false">User</string>
    <string name="welcome_string">Welcome, User</string>
    <string name="search_string">Search</string>
    <string name="restaurant_search_hint">Search for a restaurant…</string>
    <string name="all">All</string>
    <string name="price">Price</string>
    <string name="open_now">Open Now</string>
    <string name="more">More…</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="open">Open</string>
    <string name="view_as">View as:</string>
    <string name="filter">Filter</string>
    <string name="arrow">Arrow</string>
    <string name="copyright_text">Copyright © 2024, MealCompass</string>
    <string name="app_settings">App Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="cuisine">Cuisine:</string>
    <string name="rating">Rating:</string>
    <string name="restaurant_price">Price:</string>
    <string name="open_or_close">OPEN</string>
    <string name="favorite_restaurant">Favorite Restaurant</string>
    <string name="discover_text">Discover frequently updated articles on healthy eating habits.</string>
    <string name="authorName">Author</string>
    <string name="timePosted">35 minutes ago</string>
    <string name="discover_image">Discover Article Image</string>
    <string name="discover_article_title">Discover Article Title</string>
    <string name="discover_article_content">Discover Article Content</string>
    <string name="read_more">Read more…</string>
    <string name="restaurants_for_you">Restaurants For You</string>
    <string name="ratingFilter">Rating</string>
    <string name="distance">Distance</string>
    <string name="rate_recommendation">Rate\n recommendation</string>
    <string name="refresh_results">Refresh results</string>
    <string name="historyOfRestaurants">History of recommended restaurants</string>
    <string name="search_favourites_hint">Search for your favourite restaurant…</string>
    <string name="back">Back</string>
    <string name="recommended_text">Menu items for you</string>
    <string name="item_name">Item Name</string>
    <string name="restaurants_string">Restaurants</string>
    <string name="menu_items">Menu Items</string>
    <string name="restaurantTitle">Restaurant Title</string>
    <string name="item_image">Item Image</string>
    <string name="itemName">Item Name</string>
    <string name="itemDescription">Item Description</string>
    <string name="itemPrice">Item Price</string>
    <string name="itemCategory">Item Category</string>
    <string name="itemAllergens">Item Allergens</string>
    <string name="itemCalories">Item Calories</string>
    <string name="appIcon">App Logo</string>
    <string name="welcome_text">Welcome to MealCompass, a Food Recommendation System that aims to deliver accurate results and healthy suggestions based on your personal preferences.</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="welcomeDescription">Log Into Your MealCompass Account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordRequirements">Password has to have at least 6 characters, an uppercase character and a special character.</string>
    <string name="forgot_password">Forgot Password? Click here.</string>
    <string name="signup_text">Haven\'t created an account yet? Sign Up.</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_description">Forgotten your password? Fret not, enter your email below to create a new password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_log_in">Back to Log In</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="proceed">Proceed</string>
    <string name="rate_recommendation_title">Rate the recommendation</string>
    <string name="close_button">Close</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="onboarding">Cooking Up Your Preferences</string>
    <string name="onboarding_description">After selecting your preferred cuisine choices and indicating any allergy issues, MealCompass aims to provide recommendations that are accurate and relevant based on your feedback.</string>
    <string name="onboarding_text">This may take a while… A new experience is waiting for you…</string>
    <string name="get_started">Proceed</string>
    <string name="register">Register for a MealCompass Account</string>
    <string name="register_description">Unlock new possibilities and innovations in food recommendations based on your preferences.</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Re-enter Password</string>
    <string name="accept_terms"><![CDATA[I agree to the Terms & Conditions.]]></string>
    <string name="login_from_register">Have an account? Log In.</string>
    <string name="favourite_button">Favourite</string>
    <string name="restaurant_contact">Restaurant Contact</string>
    <string name="restaurant_hours">"Business Hours: "</string>
    <string name="map">Restaurant Map</string>
    <string name="restaurant_rating">"Rating: "</string>
    <string name="show_reviews">All Reviews</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="full_menu">Full Menu</string>
    <string name="menu_item_image">Menu Item Image</string>
    <string name="select_role">Select a role</string>
    <string name="select_role_description">There are few roles to choose from:</string>
    <string name="user_role_description">User: Receives recommendation on food based on preferences.</string>
    <string name="owner_role_description">Restaurant owner: Manages restaurant and menu items.</string>
    <string name="admin_role_description">As an admin, you manage the application and respond to users\' questions.</string>
    <string name="user_role_image">"User Role "</string>
    <string name="user_role">User</string>
    <string name="restaurant_owner_image">Restaurant Owner</string>
    <string name="owner_role">Restaurant owner</string>
    <string name="admin_role">Admin</string>
    <string name="select_preferences">Select Your Preferences</string>
    <string name="cuisines">Cuisines</string>
    <string name="malay">Malay</string>
    <string name="chinese">Chinese</string>
    <string name="indian">Indian</string>
    <string name="korean">Korean</string>
    <string name="japanese">Japanese</string>
    <string name="thai">Thai</string>
    <string name="nyonya">Nyonya</string>
    <string name="western">Western</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="others">Others</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="menu">Menu</string>
    <string name="welcome_rest_owner">Welcome, Restaurant Owner</string>
    <string name="edit_rest_details">Edit restaurant details</string>
    <string name="status">Status: Approved</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="more_button">More</string>
    <string name="ratings">Ratings</string>
    <string name="user_email">"User Email: "</string>
    <string name="user_type">"User Type: "</string>
    <string name="delete_user">Delete User</string>
    <string name="restaurant_pricing">Restaurant Pricing</string>
</resources>