<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuItem.MenuItemFragment">


    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/item_image"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/restaurant_img"
        android:padding="3dp"/>



    <TextView
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemName"
        app:layout_constraintTop_toBottomOf="@id/itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginStart="3dp"
        />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemDescription"
        app:layout_constraintTop_toBottomOf="@id/itemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemPrice"
        app:layout_constraintTop_toBottomOf="@id/itemDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/itemCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemCategory"
        app:layout_constraintTop_toBottomOf="@id/itemPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/itemAllergens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemAllergens"
        app:layout_constraintTop_toBottomOf="@id/itemCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/itemCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemCalories"
        app:layout_constraintTop_toBottomOf="@id/itemAllergens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="3dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>