<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_purple"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/discoverCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

    <RelativeLayout
        android:id="@+id/topCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

    <LinearLayout
        android:id="@+id/authorDetailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorName"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/timePosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timePosted"
            android:textSize="16sp"
            />
    </LinearLayout>

        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/more_button"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/baseline_more_vert_24"

            />

    </RelativeLayout>

        <ImageView
            android:id="@+id/discoverImage"
            android:contentDescription="@string/discover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            tools:src="@drawable/discover_img"/>

        <TextView
            android:id="@+id/discoverArticleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_article_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/discoverArticleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="3"
            android:ellipsize="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/readMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:layout_margin="5dp"
            android:layout_gravity="end"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>