<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantOwner.RestaurantOwnerFragment">

    <TextView
        android:id="@+id/welcomeRestOwnerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_rest_owner"
        android:textSize="32sp"
        android:gravity="center_vertical"
        android:layout_marginStart="3dp"
        app:layout_constraintEnd_toStartOf="@id/profileImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/profile_image"
        app:shapeAppearance="@style/CircularProfilePic"
        android:src="@drawable/baseline_account_circle_24"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/welcomeRestOwnerTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/restaurantNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/welcomeRestOwnerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statusText"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/welcomeRestOwnerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="3dp"
        android:textSize="20sp"
        />



    <TextView
        android:id="@+id/restDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_details"
        app:layout_constraintTop_toBottomOf="@id/restaurantNameText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/edit_rest_details"
        android:src="@drawable/baseline_edit_24"
        android:scaleType="centerCrop"
        android:background="?android:selectableItemBackground"
        android:padding="3dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/restaurantNameText"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/restDetailsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/restaurantDetailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/restaurantImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/restaurant_image"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                tools:src="@drawable/restaurant_img"
                android:padding="3dp"/>

            <TextView
                android:id="@+id/restaurantAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_address"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/baseline_location_pin_24" />

            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/restaurantMapView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/map"
                />

            <RelativeLayout
                android:id="@+id/restaurantRatingLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/restaurantRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_rating"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:drawablePadding="5dp"
                    app:drawableStartCompat="@drawable/baseline_stars_24"/>



                <RatingBar
                    android:id="@+id/restaurantRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/restaurantRatingTitle"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.1"

                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/restaurantPricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_pricing"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/baseline_attach_money_24"/>

            <TextView
                android:id="@+id/restaurantContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_contact"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/baseline_call_24"/>

            <TextView
                android:id="@+id/restaurantCuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuisine"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/baseline_restaurant_menu_24"/>

            <TextView
                android:id="@+id/restaurantBusinessHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_hours"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/baseline_access_time_24"/>

        </LinearLayout>




    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>