<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_purple"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/restaurantCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/restaurantImage"
            android:contentDescription="@string/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            tools:src="@drawable/restaurant_img"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurantNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/restaurant_name"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="3dp"/>

            <CheckBox
                android:id="@+id/restaurantFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:button="@drawable/favourite_icon_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/restaurantDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/restaurantAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_address"
            android:textSize="16sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/restaurantCuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuisine"
            android:textSize="16sp"
            android:padding="3dp"/>


        <TextView
            android:id="@+id/restaurantRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/restaurantPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_price"
            android:textSize="16sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/restaurantOpenOrClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_or_close"
            android:textSize="16sp"
            android:padding="3dp"
            android:textStyle="bold"
            android:textColor="@color/green"/>
    </LinearLayout>
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

