<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Admin.UserDetailsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:shapeAppearance="@style/CircularProfilePic"
        android:contentDescription="@string/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage" />


    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/user_email"
        android:padding="5dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/userRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/user_type"
        android:padding="5dp"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        app:layout_constraintTop_toBottomOf="@id/userRole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:cornerRadius="20dp"
        android:padding="15dp"
        android:textSize="16sp" />



</androidx.constraintlayout.widget.ConstraintLayout>